removed database.yml from tracking and also stop using scss and coffeescript

--- a/config/database.settings.yml
+++ b/config/database.settings.yml
@@ -7,8 +7,8 @@ development:
   development:
   adapter: mysql2
   database: gpc
-  username: root
-  password: 
+  username: username
+  password: password
   host: localhost
   port: 3306
   timeout: 5000
